--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>https://arekbee.github.io/blog</title><link rel=canonical href=https://arekbee.github.io/blog><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://arekbee.github.io/blog"></head></html>
+<!doctype html><html><head><title>http://arekonsoftware.pl/</title><link rel=canonical href=http://arekonsoftware.pl/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=http://arekonsoftware.pl/"></head></html>
